tests/asm/error/op_double_operation_on_single_line.s
.name "zork"
.comment "I'M ALIIIIVE"

live	%1 live %1
#r_asm return Syntax error at token [TOKEN][004:009] INSTRUCTION "live"
